fin de la clase del martes 12